environment/get-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: get-ingress
  labels:
    app: test
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3333
  selector:
    app: test
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-get
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - path: /test/
        pathType: Prefix
        backend:
          service:
            name: get-ingress
            port:
              number: 80
